Fixed \advisor mode off not printing bibliography abstracts

--- a/settings.tex
+++ b/settings.tex
@@ -272,7 +272,7 @@
     }%
     % remove fields that are always useless
     \map{
-      \step[fieldset=abstract, null]
+      % \step[fieldset=abstract, null]
       \step[fieldset=pagetotal, null]
     }
     % % remove URLs for types that are primarily printed
