Removed obsolete command advise from monograph/settings.tex

--- a/settings.tex
+++ b/settings.tex
@@ -79,7 +79,7 @@
   \checkandfixthelayout
 }{}
 
-% Controlling the spacing between one paragraph and another, try also \onelineskip
+% Controlling the spacing between one paragraph and another
 % Default value for UFSC 0.0cm
 \setlength{\parskip}{\advisor{0.0cm}{0.2cm}}
 
