--- a/settings.tex
+++ b/settings.tex
@@ -147,6 +147,8 @@
 
 % https://tex.stackexchange.com/questions/517526/how-to-make-biblatex-url-links-generated-with-brackets-around-it-url-correctly
 \DeclareFieldFormat{url}{\bibstring{urlfrom}\addcolon\space\textless\url{#1}\textgreater}
+\DefineBibliographyStrings{brazil}{urlfrom = {Disponível em}}
+\DefineBibliographyStrings{english}{urlfrom = {Available from}}
 
 % https://tex.stackexchange.com/questions/391695/is-possible-to-remove-the-link-color-of-the-comma-on-the-citation-link
 % \DeclareFieldFormat{citehyperref}{#1}
