Removed double time of the day on fichacatalografica.tex

--- a/beforetext/fichacatalografica.tex
+++ b/beforetext/fichacatalografica.tex
@@ -51,7 +51,7 @@ contidos.
                 ~/~\imprimirautor%
                 ;~\imprimirorientadorRotulo,~\imprimirorientador%
                 \ifnotempty{\imprimircoorientador}{;~\imprimircoorientadorRotulo,~\imprimircoorientador}%
-                ~--~\imprimirlocal,~\currenttime,~\imprimirdata.
+                ~--~\imprimirlocal,~\imprimirdata.
 
                 % Prints how much pages there are on the document and links to the last page
                 \hspace{0.5cm} \pageref{LastPage} p.
