Added missing % end line comments to fichacatalografica.tex

--- a/beforetext/fichacatalografica.tex
+++ b/beforetext/fichacatalografica.tex
@@ -68,14 +68,14 @@ contidos.
                 % https://tex.stackexchange.com/questions/61811/how-to-define-inparaenum-in-the-preamble
                 \hspace{0.5cm}
                 \begin{inparaenum}
-                    \lang{\palavraschaveinglescomvirgula}{\palavraschaveportuguescomvirgula}
-                \end{inparaenum}
+                    \lang{\palavraschaveinglescomvirgula}{\palavraschaveportuguescomvirgula}%
+                \end{inparaenum}%
                 \begin{inparaenum}[I.]
                     \item \imprimirorientador~
                     \ifnotempty{\imprimircoorientador}{\item \imprimircoorientador~}
                     \item \imprimirprograma~
                     \item \imprimirtitulo~
-                \end{inparaenum}
+                \end{inparaenum}%
                 \bigskip
 
                 \hspace{7.75cm} CDU 02:141:005.7
