--- a/beforetext/beforetext.tex
+++ b/beforetext/beforetext.tex
@@ -68,7 +68,7 @@
 
     \include{beforetext/fichacatalografica}
     % https://tex.stackexchange.com/questions/91440/how-to-include-multiple-pages-in-latex
-    % \includepdf{Ficha_Catalografica.pdf}
+    % \includepdf{pictures/Ficha_Catalografica.pdf}
     \ifforcedinclude\else\cleardoublepage\fi
 \fi
 
@@ -81,7 +81,7 @@
 % banca com o comando abaixo:
 \ifforcedinclude\else\cleardoublepage\fi
 \include{beforetext/folhadeaprovacao}
-% \includepdf{folhadeaprovacao_final.pdf}
+% \includepdf{pictures/folhadeaprovacao_final.pdf}
 
 
 % Dedicatória
