Added missing documentation comment to beforetext.tex

--- a/beforetext/beforetext.tex
+++ b/beforetext/beforetext.tex
@@ -47,6 +47,8 @@
 
         \clearpage
     }
+
+    % Fix the \textpreliminarycontents not showing up when @twoside is disabled
     \ifthenelse{\boolean{ufscThesisXisMemoirTwoSidesEnabled}}
     {\setboolean{@twoside}{true}}
     {\setboolean{@twoside}{false}}
