--- a/main.tex
+++ b/main.tex
@@ -61,7 +61,7 @@
 \lang{english}{brazilian,brazil}, % https://tex.stackexchange.com/questions/484400/changing-the-cleveref-package-language-conjunction-definition
 12pt, % Padrão UFSC para versão final
 a4paper, % Padrão UFSC para versão final
-twoside, % Impressão nos dois lados da folha
+oneside, % Impressão nos dois lados da folha
 chapter=TITLE, % Título de capítulos em caixa alta
 section=TITLE, % Título de seções em caixa alta
 ]{setup/ufscthesisx}
